# adventofcode-2024

./: pyproject.toml
day1/: main.py  test_main.py
day10/: main.py  test_main.py
day11/: main.py  test_main.py
day12/: test_main.py
day13/: main.py  test_main.py
day14/: main.py  test_main.py
day2/: main.py  test_main.py
day3/: main.py  test_main.py
day4/: main.py  test_main.py
day5/: main.py  test_main.py
day6/: main.py  test_main.py
day7/: main.py  test_main.py
day8/: main.py  test_main.py
day9/: main.py  test_main.py
