[project]
name = "adventofcode-2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "more-itertools>=10.5.0",
    "networkx[default]>=3.4.2",
]

[tool.uv]
dev-dependencies = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.4",
]
